--- a/index.html
+++ b/index.html
@@ -101,40 +101,49 @@
     </section>
 
 
-   
-
-
-
-
-
-
     <!-- services section start -->
     <section class="services" id="services">
         <div class="max-width">
-            <h2 class="title">My services</h2>
+            <h2 class="title">Career Timeline</h2>
             <div class="serv-content">
-                <div class="card">
-                    <div class="box">
-                        <i class="fas fa-paint-brush"></i>
-                        <div class="text">Web Design</div>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem quia sunt, quasi quo illo enim.</p>
+                
+                <div class="educationcontainer">
+                    <div class="timeline">
+                      <ul>
+                        <li>
+                          <div class="timeline-content">
+                            <h3 class="date"> Jan 2021-Present <br/>
+                                Expected graduation - Dec 2022
+                            </h3>
+                            <h1>Masters in Computer Science at Northeastern University</h1>
+                            <p> I have taken courses which focuses on software development. <br/>
+                                Subjects of interest - Algorithms, WebDevelopment </p>
+                          </div>
+                        </li>
+                        <li>
+                          <div class="timeline-content">
+                            <h3 class="date">Jun 2021 - Aug 2021</h3>
+                            <h1>Khoury Teaching Assistant</h1>
+                            <p>Serving as a Teaching Assistant for the course “Algorithms” by mentoring students to help them comprehend the fundamentals and assist them with their doubts, also working on grading their assignment.</p>
+                          </div>
+                        </li>
+                        <li>
+                          <div class="timeline-content">
+                            <h3 class="date">Jan 2020 - Dec 2020</h3>
+                            <h1> Software Engineer </br>Scriplogix Analytics </h1>
+                            <p></p>
+                          </div>
+                        </li>
+                        <li>
+                          <div class="timeline-content">
+                            <h3 class="date">20th may, 2010</h3>
+                            <h1>Heading 4</h1>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur tempora ab laudantium voluptatibus aut eos placeat laborum, quibusdam exercitationem labore.</p>
+                          </div>
+                        </li>
+                      </ul>
                     </div>
-                </div>
-                <div class="card">
-                    <div class="box">
-                        <i class="fas fa-chart-line"></i>
-                        <div class="text">Advertising</div>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem quia sunt, quasi quo illo enim.</p>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="box">
-                        <i class="fas fa-code"></i>
-                        <div class="text">Apps Design</div>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem quia sunt, quasi quo illo enim.</p>
-                    </div>
-                </div>
-               </div>
+                  </div>
             </div>
         </div>
     </section>
